--- a/public/index.html
+++ b/public/index.html
@@ -5,5 +5,6 @@
 <body>
   <h1>Welcome to my website</h1>
   <p>Now hosted on Azure! v0.0.1</p>
+  <p>Uploaded via GitHub Action!</p>
 </body>
 </html>
