--- a/public/index.html
+++ b/public/index.html
@@ -6,5 +6,6 @@
   <h1>Welcome to my website</h1>
   <p>Now hosted on Azure! v0.0.1</p>
   <p>Uploaded via GitHub Action!</p>
+  <p>cdn purged by GitHub Action!</p>
 </body>
 </html>
