--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,6 @@
   <p>Now hosted on Azure! v0.0.1</p>
   <p>Uploaded via GitHub Action!</p>
   <p>cdn purged by GitHub Action!</p>
-  <p>Test for GitHub Action triggering</p>
+  <p>Test for GitHub Action using OIDC</p>
 </body>
 </html>
