--- a/public/index.html
+++ b/public/index.html
@@ -7,5 +7,6 @@
   <p>Uploaded via GitHub Action!</p>
   <p>cdn purged by GitHub Action!</p>
   <p>Test for GitHub Action using OIDC</p>
+  <p>Test for GitHub Action using OIDC</p>
 </body>
 </html>
